    + Document PGP key(s) used in the project and how to retrieve it.
  * Test suite: Run checkbashism also on share/common.sh and
    Xsession.d/25unburden-home-dir-xdg.
  * Test suite: Provide checkbashism as its own Make target.
  * Use Perl::Critic as part of the test suite.
    + Add libtest-perl-critic-perl as build-dependency.
    + Add a .perlcriticrc file to configure Perl::Critic.

 -- Axel Beckert <abe@debian.org>  Fri, 13 Oct 2017 22:27:58 +0200

unburden-home-dir (0.4.0.2) unstable; urgency=medium

  * Support autopkgtest v4.
  * t/version.t: Re-enable strictures; fix reason why they were disabled.
  * debian/copyright: Update copyright years and my e-mail address.
  * debian/copyright: Remove no more updated Git repositories.
  * Mention profile-sync-daemon as related tool.
  * Update test suite helper library to cope with changed output of "mv
    -v" since coreutils 8.28 or so. (Closes: #878336)
  * Declare compliance with Debian Policy 4.1.1.
    + Change Priority to "optional".
  * Switch to debhelper compatibility level 10.
    + Update versioned debhelper build-dependency accordingly.
    + Drop explicit --parallel from debian/rules.
  * Update debian/gbp.conf to sport current section names and GPG keys.

 -- Axel Beckert <abe@debian.org>  Fri, 13 Oct 2017 03:25:02 +0200

unburden-home-dir (0.4.0.1) unstable; urgency=medium

  * Fix typos in man page.
  * Test suite: Use File::Slurper with "eval { write_text(@_); 1 }"
    instead of "-e".
  * Split off an unburden-home-dir-doc package as recommended by the
    Debian Policy since version 3.9.7.
    + Make fonts-font-awesome a Recommends of unburden-home-dir-doc
      instead of a Suggests of unburden-home-dir.
    + Rename all binary-package specific debian/* files to
      debian/unburden-home-dir.*.
  * Fix installation of NEWS.Debian
  * Don't install mkdocs-generated __init__.py.

 -- Axel Beckert <abe@debian.org>  Wed, 25 May 2016 01:56:59 +0200
