@@ -1,1 +1,2 @@
-severity = 5
+severity = 4
+verbose = 8
