@@ -1,0 +1,2 @@
+severity = 5
+verbose = 8
