@@ -1,0 +1,3 @@
+severity = 4
+verbose = 8
+exclude = Modules::RequireExplicitPackage Variables::RequireLocalizedPunctuationVars
