@@ -8,7 +8,8 @@ unburden-home-dir (0.4.0.3) UNRELEASED; urgency=medium
   * Test suite: Provide checkbashism as its own Make target.
   * Use Perl::Critic as part of the test suite.
     + Add libtest-perl-critic-perl as build-dependency.
-    + Add a .perlcriticrc file to configure Perl::Critic.
+    + Add a .perlcriticrc* files to configure Perl::Critic.
+    + Make Test::UBH perlcritic-severity-4-clean.
 
  -- Axel Beckert <abe@debian.org>  Fri, 13 Oct 2017 22:27:58 +0200
 
